[metadata]
name = ami-push
version = 0.1.0
author = Osvaldo Santana Neto
author_email = ami-push@osantana.me
description = Daemon that makes a bridge to listen Asterisk Management Interface (AMI) Events and send HTTP requests
long_description = file: README.rst
description-file = README.rst
keywords = python, asterisk
license = MIT
classifiers =
    Programming Language :: Python :: 3

[wheel]
universal = 1
